# SREDemo

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
design/hackathon/section-1-incident-input/: design.md
design/hackathon/section-2-clarification-hitl/: design.md
design/hackathon/section-3-plan-history/: design.md
design/hackathon/section-4-budget-drama/: design.md
design/http-integration/: design.md
presentation/: AgenticFrmk-VC-Pitch.pptx  LUMA-SUBMISSION.md  VC-PITCH.md  VIDEO-SCRIPT.md  build_pitch_deck.py
requirements/: PRD-sre-hackathon.md  PRD-sre-ui.md
requirements/features/: sre-hackathon-budget-drama.md  sre-hackathon-clarification-hitl.md  sre-hackathon-incident-input.md  sre-hackathon-plan-history.md  sre-ui-backend-bridge.md  sre-ui-context-budget.md  sre-ui-http-client.md  sre-ui-react-web.md  sre-ui-synthetic-data.md
sre_demo/: demo.py  entities.py  registries.py  synthetic.py
sre_demo/hackathon/: record_demo.py
sre_demo/incidents/: vpn_tunnel_flap.py
sre_demo/tools/: aws_vpn.py  datadog.py  network_ops.py  pagerduty.py
sre_demo/web/: server.py
sre_demo/web/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
sre_demo/web/frontend/src/: App.tsx  index.css  main.tsx
sre_demo/web/frontend/src/components/: ActivityFeed.tsx  BudgetGauge.tsx  ClarificationModal.tsx  CompactionBanner.tsx  EntityCard.tsx  ExampleChips.tsx  ExecutionFeed.tsx  HistoryCard.tsx  HitlModal.tsx  IncidentInput.tsx  IncidentPanel.tsx  PlanTable.tsx  (+4 more)
(+6 files in other folders)
