[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sre_demo"]

[project]
name = "sre-demo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # AgentCore is installed directly from the local source in the Dockerfile
    # AWS SDK
    "boto3>=1.34",
    "botocore>=1.34",
    # HTTP client (Datadog + PagerDuty REST calls)
    "httpx>=0.27",
    # LangGraph in-memory checkpointer
    "langgraph>=0.2",
    # Python dotenv for local .env loading
    "python-dotenv>=1.0",
    # Web UI — FastAPI backend bridge + SSE streaming
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
